--- a/api/category/models/category.settings.json
+++ b/api/category/models/category.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "category",
   "info": {
-    "name": "category"
+    "name": "category",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -18,7 +19,8 @@
     },
     "slug": {
       "type": "uid",
-      "required": true
+      "required": true,
+      "targetField": "name"
     }
   }
 }
